feat: added new api endpoints and frontend pages and components as well as cleanup: improve, sorting, etc
